# audio-plugins

./: .gitignore  README.md
piano-sampler/: README.md  kontakt-fixups.md  pyproject.toml
piano-sampler/scripts/: bootstrap.sh  synth_take.py
piano-sampler/src/piano_sampler/: __init__.py  cli.py  decentsampler.py  edge_treatment.py  labeler.py  notes.py  pipeline.py  pitch.py  sfz.py  slice.py  wav_io.py
