[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piano-sampler"
version = "0.1.0"
description = "Slice a continuous piano-sampling session into a playable SFZ/Kontakt instrument."
requires-python = ">=3.11"
authors = [{ name = "Ross", email = "ross@bimross.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
piano-sampler = "piano_sampler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/piano_sampler"]
